force-app/main/default/objects/Product2/fields/GAM_Ad_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>GAM_Ad_Unit_Name__c</fullName>
    <label>GAM Ad Unit Name</label>
    <length>255</length>
    <type>Text</type>
    <description>Exact name of the Google Ad Manager Ad Unit this product should target when pushed to GAM. Leave blank to fall back to the first active Ad Unit in the network.</description>
</CustomField>