force-app/main/default/objects/Product2/fields/GAM_Creative_Height__c.field-meta.xml
<CustomField>
    <fullName>GAM_Creative_Height__c</fullName>
    <label>GAM Creative Height (px)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Creative height in pixels for this product's Line Items in Google Ad Manager. Leave blank to default to 250.</description>
</CustomField>