force-app/main/default/objects/Product2/fields/GAM_Creative_Width__c.field-meta.xml
<CustomField>
    <fullName>GAM_Creative_Width__c</fullName>
    <label>GAM Creative Width (px)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Creative width in pixels for this product's Line Items in Google Ad Manager. Leave blank to default to 300.</description>
</CustomField>